--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8070
-spring.application.name=patrimonio-api
+spring.application.name=register
 spring.profiles.active=dev
 
 spring.jpa.hibernate.ddl-auto=update
